docs(readme): add Maven & Gradle installation and dependency configuration guide